--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -15,7 +15,7 @@ master.page.customer.action.1		= Action 1
 master.page.customer.action.2		= Action 2
 
 master.page.profile 				= Profile
-master.page.profile.action.1 		= Action 1
+master.page.profile.action.1 		= Famous quotes
 master.page.profile.action.2		= Action 2
 master.page.profile.action.3		= Action 3
 
