--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -15,7 +15,7 @@ master.page.customer.action.1		= Acción 1
 master.page.customer.action.2		= Acción 2
 
 master.page.profile 				= Perfil
-master.page.profile.action.1 		= Acción 1
+master.page.profile.action.1 		= Frases célebres
 master.page.profile.action.2		= Acción 2
 master.page.profile.action.3		= Acción 3
 
