--- a/src/main/webapp/views/profile/messages_es.properties
+++ b/src/main/webapp/views/profile/messages_es.properties
@@ -6,7 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-profile.action.1	= Esta es la acción 1 del perfil
+profile.action.1	= Frases célebres
 profile.action.2	= Esta es la acción 2 del perfil
 
 profile.compute		= Calcular
