--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -18,6 +18,8 @@ master.page.profile 				= Profile
 master.page.profile.action.1 		= Famous quotes
 master.page.profile.action.2		= Action 2
 master.page.profile.action.3		= Action 3
+master.page.profile.curso 			= Courses
+master.page.profile.curso.list 		= List
 
 master.page.login 					= Login
 master.page.logout 					= Logout
