--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -18,6 +18,8 @@ master.page.profile 				= Perfil
 master.page.profile.action.1 		= Frases célebres
 master.page.profile.action.2		= Acción 2
 master.page.profile.action.3		= Acción 3
+master.page.profile.curso 			= Cursos
+master.page.profile.curso.list 		= Lista
 
 master.page.login 					= Entrar
 master.page.logout 					= Salir
