--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -20,6 +20,8 @@ master.page.profile.action.2		= Acción 2
 master.page.profile.action.3		= Acción 3
 master.page.profile.curso 			= Cursos
 master.page.profile.curso.list 		= Lista
+master.page.profile.estilo 			= Estilo
+master.page.profile.estilo.list 	= Lista
 
 master.page.login 					= Entrar
 master.page.logout 					= Salir
