--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -20,6 +20,8 @@ master.page.profile.action.2		= Action 2
 master.page.profile.action.3		= Action 3
 master.page.profile.curso 			= Courses
 master.page.profile.curso.list 		= List
+master.page.profile.estilo 			= Styles
+master.page.profile.estilo.list 	= List
 
 master.page.login 					= Login
 master.page.logout 					= Logout
