Solicitud con relaciones

--- a/src/main/webapp/views/curso/messages.properties
+++ b/src/main/webapp/views/curso/messages.properties
@@ -7,9 +7,12 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-curso.titulo	= Title
-curso.fechaini	= Start
-curso.fechafin	= Finish
-curso.diaSemana	= Day
-curso.hora		= Hour
-curso.nivel 	= Level
+curso.titulo		= Title
+curso.fechaini		= Start
+curso.fechafin		= Finish
+curso.diaSemana		= Day
+curso.hora			= Hour
+curso.nivel 		= Level
+curso.commit.error 	= Error
+curso.save 			= Save
+curso.cancel 		= Cancel
