--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -20,8 +20,13 @@ master.page.profile.action.2		= Acción 2
 master.page.profile.action.3		= Acción 3
 master.page.profile.curso 			= Cursos
 master.page.profile.curso.list 		= Lista
+master.page.profile.curso.create 	= Crear
 master.page.profile.estilo 			= Estilos
 master.page.profile.estilo.list 	= Lista
+master.page.profile.tutorial 		= Tutoriales
+master.page.profile.tutorial.list 	= Lista
 
 master.page.login 					= Entrar
 master.page.logout 					= Salir
+master.page.register 				= Registrarse
+master.page.register.register 		= Registrarse
