--- a/src/main/webapp/views/security/messages.properties
+++ b/src/main/webapp/views/security/messages.properties
@@ -14,3 +14,7 @@ security.password		= Password:
 security.login			= Login
 
 security.login.failed	= Your user name or password is wrong! 
+
+security.rol 			= Select how you want to register like:
+security.save 			= Save
+security.cancel 		= Cancel
