--- a/src/main/webapp/views/security/messages_es.properties
+++ b/src/main/webapp/views/security/messages_es.properties
@@ -13,4 +13,8 @@ security.password		= Contraseña:
 
 security.login			= Login
 
-security.login.failed	= ¡Su usuario o contraseña son incorrectos! 
+security.login.failed	= ¡Su usuario o contraseña son incorrectos!
+
+security.rol 			= Selecciona de qué forma quieres registrarte: 
+security.save 			= Guardar
+security.cancel 		= Cancelar
