--- a/src/main/webapp/views/tutorial/messages.properties
+++ b/src/main/webapp/views/tutorial/messages.properties
@@ -1,4 +1,4 @@
-# messages_es.properties
+# messages.properties
 #
 # Copyright (C) 2017 Universidad de Sevilla
 # Author (A) 2012 Rafael Corchuelo (corchu@us.es)
@@ -7,12 +7,6 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-curso.titulo		= Título
-curso.fechaini		= Inicio
-curso.fechafin		= Finalización
-curso.diaSemana		= Día
-curso.hora			= Hora
-curso.nivel 		= Nivel
-curso.commit.error 	= Error
-curso.save 			= Guardar
-curso.cancel 		= Cancelar
+tutorial.titulo		= Tittle
+tutorial.descripcion= Description
+tutorial.video		= Video
