--- a/src/main/webapp/views/tutorial/messages_es.properties
+++ b/src/main/webapp/views/tutorial/messages_es.properties
@@ -7,12 +7,6 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-curso.titulo		= Título
-curso.fechaini		= Inicio
-curso.fechafin		= Finalización
-curso.diaSemana		= Día
-curso.hora			= Hora
-curso.nivel 		= Nivel
-curso.commit.error 	= Error
-curso.save 			= Guardar
-curso.cancel 		= Cancelar
+tutorial.titulo		= Titulo
+tutorial.descripcion= Descripcion
+tutorial.video		= Video
