relaciones terminadas y vista de solicitudes del alumno terminada

--- a/src/main/webapp/views/solicitud/messages.properties
+++ b/src/main/webapp/views/solicitud/messages.properties
@@ -7,14 +7,6 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-curso.titulo		= Title
-curso.fechaini		= Start
-curso.fechafin		= Finish
-curso.diaSemana		= Day
-curso.hora			= Hour
-curso.nivel 		= Level
-curso.estilo 		= Style
-curso.academia 		= Academy
-curso.commit.error 	= Error
-curso.save 			= Save
-curso.cancel 		= Cancel
+solicitud.curso		= Requested course
+solicitud.momento	= Request date
+solicitud.estado 	= Current status
