--- a/src/main/webapp/views/solicitud/messages_es.properties
+++ b/src/main/webapp/views/solicitud/messages_es.properties
@@ -7,14 +7,6 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-curso.titulo		= Título
-curso.fechaini		= Inicio
-curso.fechafin		= Finalización
-curso.diaSemana		= Día
-curso.hora			= Hora
-curso.nivel 		= Nivel
-curso.estilo 		= Estilo
-curso.academia 		= Academia
-curso.commit.error 	= Error
-curso.save 			= Guardar
-curso.cancel 		= Cancelar
+solicitud.curso		= Curso solicitado
+solicitud.momento	= Fecha de realización
+solicitud.estado 	= Estado actual
