--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -6,27 +6,29 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-master.page.administrator			= Administrator
-master.page.administrator.action.1	= Action 1
-master.page.administrator.action.2	= Action 2
+master.page.administrator				= Administrator
+master.page.administrator.action.1		= Action 1
+master.page.administrator.action.2		= Action 2
 
-master.page.customer				= Customer
-master.page.customer.action.1		= Action 1
-master.page.customer.action.2		= Action 2
+master.page.customer					= Customer
+master.page.customer.action.1			= Action 1
+master.page.customer.action.2			= Action 2
 
-master.page.profile 				= Profile
-master.page.profile.action.1 		= Famous quotes
-master.page.profile.action.2		= Action 2
-master.page.profile.action.3		= Action 3
-master.page.profile.curso 			= Courses
-master.page.profile.curso.list 		= List
-master.page.profile.curso.create 	= Create
-master.page.profile.estilo 			= Styles
-master.page.profile.estilo.list 	= List
-master.page.profile.tutorial 		= Tutorials
-master.page.profile.tutorial.list 	= List
+master.page.profile 					= Profile
+master.page.profile.action.1 			= Famous quotes
+master.page.profile.action.2			= Action 2
+master.page.profile.action.3			= Action 3
+master.page.profile.curso 				= Courses
+master.page.profile.curso.list 			= List
+master.page.profile.curso.create 		= Create
+master.page.profile.estilo 				= Styles
+master.page.profile.estilo.list 		= List
+master.page.profile.tutorial 			= Tutorials
+master.page.profile.tutorial.list 		= List
+master.page.profile.solicitudes 		= Requests
+master.page.profile.solicitudes.list 	= List
 
-master.page.login 					= Login
-master.page.logout 					= Logout
-master.page.register 				= Register
-master.page.register.register 		= Register
+master.page.login 						= Login
+master.page.logout 						= Logout
+master.page.register 					= Register
+master.page.register.register 			= Register
