crud de solicitudes terminado

--- a/src/main/webapp/views/curso/messages.properties
+++ b/src/main/webapp/views/curso/messages.properties
@@ -15,6 +15,7 @@ curso.hora			= Hour
 curso.nivel 		= Level
 curso.estilo 		= Style
 curso.academia 		= Academy
+curso.solicitar 	= Request
 curso.commit.error 	= Error
 curso.save 			= Save
 curso.cancel 		= Cancel
