--- a/src/main/webapp/views/curso/messages_es.properties
+++ b/src/main/webapp/views/curso/messages_es.properties
@@ -15,6 +15,7 @@ curso.hora			= Hora
 curso.nivel 		= Nivel
 curso.estilo 		= Estilo
 curso.academia 		= Academia
+curso.solicitar 	= Solicitar
 curso.commit.error 	= Error
 curso.save 			= Guardar
 curso.cancel 		= Cancelar
