--- a/src/main/webapp/views/solicitud/messages.properties
+++ b/src/main/webapp/views/solicitud/messages.properties
@@ -10,3 +10,4 @@
 solicitud.curso		= Requested course
 solicitud.momento	= Request date
 solicitud.estado 	= Current status
+solicitud.save 		= Save
