--- a/src/main/webapp/views/solicitud/messages_es.properties
+++ b/src/main/webapp/views/solicitud/messages_es.properties
@@ -10,3 +10,4 @@
 solicitud.curso		= Curso solicitado
 solicitud.momento	= Fecha de realización
 solicitud.estado 	= Estado actual
+solicitud.save 		= Guardar
