--- a/src/main/webapp/views/curso/messages.properties
+++ b/src/main/webapp/views/curso/messages.properties
@@ -19,3 +19,7 @@ curso.solicitar 	= Request
 curso.commit.error 	= Error
 curso.save 			= Save
 curso.cancel 		= Cancel
+curso.darEstilo		= Edit style
+curso.borrarCurso   = Delete course
+curso.edit			= Edit
+curso.editCurso		= Edit course
