--- a/src/main/webapp/views/curso/messages_es.properties
+++ b/src/main/webapp/views/curso/messages_es.properties
@@ -19,3 +19,7 @@ curso.solicitar 	= Solicitar
 curso.commit.error 	= Error
 curso.save 			= Guardar
 curso.cancel 		= Cancelar
+curso.darEstilo		= Editar estilo
+curso.borrarCurso   = Borrar curso
+curso.edit			= Editar
+curso.editCurso		= Editar curso
