--- a/src/main/webapp/views/estilo/messages.properties
+++ b/src/main/webapp/views/estilo/messages.properties
@@ -9,3 +9,8 @@
 
 estilo.nombre		= Name
 estilo.descripcion	= Description
+estilo.borrarEstilo = Delete style
+estilo.save			= Save
+estilo.cancel		= Cancel
+estilo.edit			= Edit style
+estilo.editEstilo	= Edit style
