--- a/src/main/webapp/views/estilo/messages_es.properties
+++ b/src/main/webapp/views/estilo/messages_es.properties
@@ -9,3 +9,8 @@
 
 estilo.nombre		= Nombre
 estilo.descripcion	= Descripcion
+estilo.borrarEstilo = Borrar estilo
+estilo.save			= Guardar
+estilo.cancel		= Cancelar
+estilo.edit			= Editar
+estilo.editEstilo	= Editar estilo
