--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -32,3 +32,6 @@ master.page.login 						= Login
 master.page.logout 						= Logout
 master.page.register 					= Register
 master.page.register.register 			= Register
+
+master.page.profile.tutorial.create 	= Create
+master.page.profile.estilo.create		= Create
