--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -32,3 +32,6 @@ master.page.login 						= Entrar
 master.page.logout 						= Salir
 master.page.register 					= Registrarse
 master.page.register.register 			= Registrarse
+
+master.page.profile.tutorial.create     = Crear
+master.page.profile.estilo.create		= Crear
