--- a/src/main/webapp/views/tutorial/messages.properties
+++ b/src/main/webapp/views/tutorial/messages.properties
@@ -7,6 +7,11 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-tutorial.titulo		= Tittle
-tutorial.descripcion= Description
-tutorial.video		= Video
+tutorial.titulo			= Tittle
+tutorial.descripcion	= Description
+tutorial.video			= Video
+tutorial.borrarTutorial = Delete tutorial
+tutorial.save			= Save
+tutorial.cancel			= Cancel
+tutorial.edit			= Edit
+tutorial.editTutorial	= Edit tutorial
