--- a/src/main/webapp/views/tutorial/messages_es.properties
+++ b/src/main/webapp/views/tutorial/messages_es.properties
@@ -7,6 +7,11 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-tutorial.titulo		= Titulo
-tutorial.descripcion= Descripcion
-tutorial.video		= Video
+tutorial.titulo			= Titulo
+tutorial.descripcion	= Descripcion
+tutorial.video			= Video
+tutorial.borrarTutorial = Borrar tutorial
+tutorial.save			= Guardar
+tutorial.cancel			= Cancelar
+tutorial.edit			= Editar
+tutorial.editTutorial	= Editar tutorial
