editar datos de alumno funcionando

--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -28,6 +28,8 @@ master.page.profile.tutorial.list 		= List
 master.page.profile.solicitudes 		= Requests
 master.page.profile.solicitudes.list 	= List
 
+master.page.alumno.editAlumno 			= Edit data
+
 master.page.login 						= Login
 master.page.logout 						= Logout
 master.page.register 					= Register
