--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -27,6 +27,7 @@ master.page.profile.tutorial 			= Tutoriales
 master.page.profile.tutorial.list 		= Lista
 master.page.profile.solicitudes 		= Solicitudes
 master.page.profile.solicitudes.list 	= Lista
+master.page.alumno.editAlumno 			= Editar datos
 
 master.page.login 						= Entrar
 master.page.logout 						= Salir
